# mistify

./: .gitignore  CITATION.cff  README.md  check_integrations.py  pyproject.toml  rel.py  setup.py  test_rel.ipynb
docs/source/: api.rst  conf.py  index.rst
integrations/: fuzzy_optim.py
mistify/: __init__.py  _core.py  base.py  binary.py  conversion.py  core.py  crisp.py  functional.py  fuzzy.py  losses.py  membership.py  ternary.py  utils.py
mistify/_base/: __init__.py  _base.py  _conversion.py  _inference.py  _membership.py  _modules.py  assess.py  conversion.py  functional.py  inference.py  membership.py  neurons.py  utils.py
mistify/_functional/: __init__.py  _dist.py  _factory.py  _grad.py  _join.py  _logic.py  _m.py  _modules.py  _set_ops.py  _shape.py
mistify/activate/: __init__.py  _modules.py
mistify/activations/: _membership.py  _preprocess.py
mistify/assess/: __init__.py  _fuzzy_assess.py
mistify/base/: assess.py  conversion.py  membership.py  utils.py
mistify/binary/: __init__.py  assess.py  conversion.py  inference.py  membership.py  neurons.py  utils.py
mistify/boolean/: __init__.py  _conversion.py  _functional.py  _generate.py  _inference.py  _membership.py  functional.py  inference.py
mistify/depracated/: losses.py
mistify/functional/: __init__.py  _factory.py  _functional.py  _grad.py  _join.py  _logic.py  _m.py  _shape.py  _ste.py
mistify/fuzzify/: __init__.py  _resp.py
mistify/fuzzy/: __init__.py  _assess.py  _conversion.py  _functional.py  _inference.py  _membership.py  _utils.py  (+9 more)
mistify2/: base.py  conversion.py  crisp.py  functional.py  fuzzy.py  membership.py  modules.py  optim.py  test_conversion.py  test_crisp.py  test_fuzzy.py  test_fuzzy_system.py  test_membership.py  utils.py
notebooks/: cmaes.ipynb  es.ipynb  gmm.py  join.py  maxmin.py  maxmin_optim.py  maxmin_reg.py  maxprodg_optim.ipynb  minmax.py  piecwise.ipynb  ste_tests.ipynb  wrap_tests.ipynb
tests/: test_conversion.py  test_core.py  test_fuzzy.py  test_fuzzy_system.py  test_membership.py
(+224 files in other folders)
