[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mistify"
version = "0.0.1"
description = "Neuro-fuzzy systems with PyTorch."
homepage = "https://github.com/short-greg/mistify"
repository = "https://github.com/short-greg/mistify"
documentation = "https://mistify.readthedocs.com"
authors = ["Greg Short <g.short@kurenai.waseda.jp>"]
license = "LICENSE"
readme = "README.md"
packages = [
    {include="mistify"},
    {include="mistify/_functional"},
    {include="mistify/fuzzify"},
    {include="mistify/infer"},
    {include="mistify/process"},
    {include="mistify/utils"},
    {include="mistify/systems"}
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">=1,<2"
# torch = {version = ">=2,<3"}
tqdm = ">=4.0"
scipy = ">=1.5,<2.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3"
isort = "^5"
black = "^21"
blacken-docs = "^1"
